--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/shape_container_wifi_details"
     tools:context=".ui.HomeFragment">
 
 
@@ -10,28 +11,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginVertical="150dp"
+        android:layout_marginVertical="100dp"
         >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Projeto Mini Kai"
-            android:textSize="28dp"
-            android:textColor="@color/black"
-            android:layout_marginBottom="80dp"
+            android:text="Mini Kai"
+            android:textSize="50dp"
+            android:textColor="@color/white"
+            android:layout_marginBottom="75dp"
             android:gravity="center"/>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:src="@drawable/wifi"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="75dp"
             />
         <Button
             android:id="@+id/btnHome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#000"
             android:layout_marginHorizontal="50dp"
-            android:text="Iniciar" />
+            android:text="Iniciar"
+            android:textSize="25dp"/>
     </LinearLayout>
 
 
