--- a/app/src/main/res/layout/fragment_wifi.xml
+++ b/app/src/main/res/layout/fragment_wifi.xml
@@ -10,17 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginVertical="50dp"
-        android:layout_marginHorizontal="20dp"
-
+        android:paddingTop="50dp"
+        android:paddingHorizontal="30dp"
+        android:background="@drawable/shape_container_wifi_details"
         >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Informações do wifi"
             android:textSize="28dp"
-            android:textColor="@color/black"
-            android:layout_marginBottom="100dp"
+            android:textColor="@color/white"
+            android:layout_marginBottom="20dp"
             android:gravity="center"/>
 
         <TextView
@@ -30,42 +30,55 @@
             android:text=""
             android:textSize="28dp"
             android:layout_marginBottom="10dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:gravity="center"/>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginLeft="10dp">
+
+
+            >
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:orientation="horizontal"
+                android:background="@drawable/wifi_datails_card"
+                android:paddingHorizontal="20dp"
+                android:layout_marginBottom="10dp"
+
                 >
+
                 <TextView
                     android:id="@+id/wifiStatusLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Status: "
-                    android:textSize="18dp"
-                    android:textColor="@color/black"
                     android:layout_marginBottom="20dp"
-                    android:gravity="start"/>
+                    android:gravity="start|right"
+                    android:text="Status: "
+                    android:layout_marginVertical="35dp"
+                    android:textColor="@color/white"
+                    android:textSize="18dp" />
                 <TextView
                     android:id="@+id/wifiStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="18dp"
-                    android:textColor="@color/black"
+                    android:layout_marginVertical="35dp"
+                    android:textColor="@color/white"
                     android:layout_marginBottom="20dp"
                     android:gravity="start"/>
 
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:orientation="horizontal"
+                android:background="@drawable/wifi_datails_card"
+                android:paddingHorizontal="20dp"
+                android:layout_marginBottom="10dp"
                 >
                 <TextView
                     android:id="@+id/SSIDLabel"
@@ -73,7 +86,8 @@
                     android:layout_height="wrap_content"
                     android:text="SSID: "
                     android:textSize="18dp"
-                    android:textColor="@color/black"
+                    android:layout_marginVertical="35dp"
+                    android:textColor="@color/white"
                     android:layout_marginBottom="20dp"
                     android:gravity="start"/>
                 <TextView
@@ -82,15 +96,19 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="18dp"
-                    android:textColor="@color/black"
+                    android:layout_marginVertical="35dp"
+                    android:textColor="@color/white"
                     android:layout_marginBottom="20dp"
                     android:gravity="start"/>
 
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:orientation="horizontal"
+                android:background="@drawable/wifi_datails_card"
+                android:paddingHorizontal="20dp"
+                android:layout_marginBottom="10dp"
                 >
                 <TextView
                     android:id="@+id/wifiFrequencyLabel"
@@ -98,7 +116,8 @@
                     android:layout_height="wrap_content"
                     android:text="Frequência do wifi: "
                     android:textSize="18dp"
-                    android:textColor="@color/black"
+                    android:layout_marginVertical="35dp"
+                    android:textColor="@color/white"
                     android:layout_marginBottom="20dp"
                     android:gravity="start"/>
                 <TextView
@@ -107,15 +126,19 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="18dp"
-                    android:textColor="@color/black"
+                    android:layout_marginVertical="35dp"
+                    android:textColor="@color/white"
                     android:layout_marginBottom="20dp"
                     android:gravity="start"/>
 
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:orientation="horizontal"
+                android:background="@drawable/wifi_datails_card"
+                android:layout_marginBottom="10dp"
+                android:paddingHorizontal="20dp"
                 >
                 <TextView
                     android:id="@+id/wifiMACAdressLabel"
@@ -123,7 +146,8 @@
                     android:layout_height="wrap_content"
                     android:text="Endereço MAC: "
                     android:textSize="18dp"
-                    android:textColor="@color/black"
+                    android:layout_marginVertical="35dp"
+                    android:textColor="@color/white"
                     android:layout_marginBottom="20dp"
                     android:gravity="start"/>
                 <TextView
@@ -132,7 +156,8 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="18dp"
-                    android:textColor="@color/black"
+                    android:layout_marginVertical="35dp"
+                    android:textColor="@color/white"
                     android:layout_marginBottom="20dp"
                     android:gravity="start"/>
 
